# crypto_converter

./: .env  Dockerfile  README.md  docker-compose.yml  pylintrc  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  pytest.yml
src/: .env  config.py  main.py
src/conversions/: app.py
src/conversions/api/: exception_handlers.py  exceptions.py  models.py  router.py
src/conversions/api/v1/: conversion.py
src/conversions/services/: dto.py  quotes.py
src/quote_consumer/: app.py  fetcher.py  main.py  provider.py  storage.py  updater.py
src/quote_consumer/api/: deps.py  exception_handlers.py  exceptions.py  models.py  router.py
src/quote_consumer/api/v1/: quotes.py
src/quote_consumer/services/: dto.py  provider.py  storage.py  websocket_manager.py
tests/: conftest.py
tests/unit/: test_consumer_api.py  test_conversion_api.py
