[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-converter"
version = "0.0.1"
dependencies = [
    "websockets==12.0",
    "fastapi==0.110.0",
    "pydantic-settings==2.2.1",
    "uvicorn==0.29.0",
    "redis==5.0.3",
    "httpx==0.27.0",
    "starlette==0.36.3",
    "pydantic==2.6.4",
    "pytest-asyncio==0.23.6"
]

[project.optional-dependencies]
lint = [
    "pylint"
]
tests = [
    "pytest~=7.4.2",
    "websockets==12.0",
    "fastapi==0.110.0",
    "pydantic-settings==2.2.1",
    "uvicorn==0.29.0",
    "redis==5.0.3",
    "httpx==0.27.0",
    "starlette==0.36.3",
    "pydantic==2.6.4",
    "pytest-asyncio==0.23.6"
]

requires-python = ">=3.11"
authors = [
  {name = "Sohimaster", email = "sohimaster@ya.ru"},
]
maintainers = [
  {name = "Sohimaster", email = "sohimaster@ya.ru"},
]
description = "Provides an API for converting amounts between different cryptocurrencies."
readme = "README.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
  "tests"
]

[tool.setuptools.packages.find]
where = ["src"]